оформление css портфолио

--- a/css/common.css
+++ b/css/common.css
@@ -3,21 +3,48 @@
   --secondary-text-color: #757575;
   --accent-colour: #2196f3;
   --logo-title-color: #000000;
-  --main-title-color: #ffffff;
+  --primary-white-color: #ffffff;
 }
 body {
-  background-color: #ffffff;
+  background-color: var(--primary-white-color);
+  color: var(--primary-text-color);
+
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
 }
 
 .logo {
   color: var(--accent-colour);
+  font-family: 'Raleway', sans-serif;
+
+  font-size: 26px;
+  font-weight: bold;
+  line-height: 1.19;
+  text-decoration: none;
 }
 .logo-title {
   color: var(--logo-title-color);
+  font-family: 'Raleway', sans-serif;
+
+  font-size: 26px;
+  font-weight: bold;
+  line-height: 1.19;
+  text-decoration: none;
+}
+.list {
+  list-style: none;
 }
 /* site nav*/
-.site-nav {
+.site-nav .link {
   color: var(--primary-text-color);
+
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.4;
+  letter-spacing: 0.02em;
+  text-decoration: none;
 }
 .site-nav .link:hover,
 .site-nav .link:focus {
@@ -26,7 +53,7 @@ body {
 .site-nav .link.current {
   color: var(--accent-colour);
 }
-.nav-contacts {
+.nav-contacts .link {
   color: var(--secondary-text-color);
 }
 .nav-contacts .link:hover,
