--- a/css/main.css
+++ b/css/main.css
@@ -1,79 +1,11 @@
-/* цвет основного текста логотипа #000000 */
-/* вторичный цвет текста логотипа голубой #2196F3* /
-/* цвет основного текста #212121 */
-/* вторичный цвет текста #757575 */
-/* цвет белый #FFFFFF*/
-/* цвет кнопки голубой #188CE8 */
-/* вторичный цвет фона #F5F4FA */
-/* цвет фона футера #2F303A*/
-:root {
-  --primary-text-color: #212121;
-  --secondary-text-color: #757575;
-  --accent-colour: #2196f3;
-  --logo-title-color: #000000;
-  --primary-white-color: #ffffff;
-}
-body {
-  background-color: var(--primary-white-color);
-  color: var(--primary-text-color);
 
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-}
 
-.logo {
-  color: var(--accent-colour);
-  font-family: 'Raleway', sans-serif;
-
-  font-size: 26px;
-  font-weight: bold;
-  line-height: 1.19;
-  text-decoration: none;
-}
-.logo-title {
-  color: var(--logo-title-color);
-  font-family: 'Raleway', sans-serif;
-
-  font-size: 26px;
-  font-weight: bold;
-  line-height: 1.19;
-  text-decoration: none;
-}
-.list {
-  list-style: none;
-}
-/* site nav*/
-.site-nav .link {
-  color: var(--primary-text-color);
-
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.4;
-  letter-spacing: 0.02em;
-  text-decoration: none;
-}
-.site-nav .link:hover,
-.site-nav .link:focus {
-  color: var(--accent-colour);
-}
-.site-nav .link.current {
-  color: var(--accent-colour);
-}
-.nav-contacts .link {
-  color: var(--secondary-text-color);
-}
-.nav-contacts .link:hover,
-.nav-contacts .link:focus {
-  color: var(--accent-colour);
-}
 /* Hero */
+
 .hero-title {
   color: var(--primary-white-color);
   background-color: #2f303a;
 
-  font-family: Roboto;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -82,12 +14,14 @@ body {
 }
 
 /* Section */
+
 .section-title {
   color: var(--primary-text-color);
 
   font-weight: bold;
   font-size: 36px;
   line-height: 1.16;
+  text-align: center;
 }
 
 .section-descriptions {
@@ -104,9 +38,10 @@ body {
 .work-list {
   color: var(--primary-white-color);
   background-color: beige;
+  
 
   /* Team */
-   .team-list {
+.team-list {
 
     font-weight: 500;
     font-size: 16px;
