--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,11 +1,3 @@
-:root {
-  --primary-text-color: #212121;
-  --secondary-text-color: #757575;
-  --accent-colour: #2196f3;
-  --logo-title-color: #000000;
-  --primary-white-color: #ffffff;
-  --button-background-color: #f5f4fa;
-}
 .button {
   color: var(--primary-text-color);
   background-color: #f5f4fa;
@@ -15,33 +7,20 @@
   color: var(--primary-white-color);
   background-color: var(--accent-colour);
 }
-.list-button
- {
+.list-button {
   list-style: none;
 
-  font-family: Roboto;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
-  letter-spacing: 0.03em;
 }
 
-
 /* Section */
-.section-title {
+.project-title {
   color: var(--primary-text-color);
 
-  font-family: Roboto;
   font-weight: bold;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-}
-
-p {
-color: var(--secondary-text-color)
-font-family: Roboto;
-font-size: 16px;
-line-height: 1.87;
-letter-spacing: 0.03em;
 }
